--- a/StockAnalysis/Exchange/ExchangeBillViewController.xib
+++ b/StockAnalysis/Exchange/ExchangeBillViewController.xib
@@ -14,7 +14,9 @@
             <connections>
                 <outlet property="allNameBtn" destination="E5j-mn-teP" id="Zd8-RY-Gkj"/>
                 <outlet property="allTypeBtn" destination="Sff-qY-akg" id="3eD-uY-FJd"/>
+                <outlet property="nameArrrow" destination="gXb-FS-bGN" id="wu8-qB-2QM"/>
                 <outlet property="nameList" destination="5bb-e9-C0d" id="NcX-j0-QNp"/>
+                <outlet property="typeArrow" destination="I37-db-msJ" id="1Bu-Ps-tqW"/>
                 <outlet property="typeList" destination="X9R-kH-XGi" id="ZHQ-0l-Wkf"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -62,15 +64,23 @@
                     <color key="backgroundColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.97647058823529409" alpha="1" colorSpace="calibratedRGB"/>
                 </view>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="5bb-e9-C0d">
-                    <rect key="frame" x="34" y="58" width="100" height="609"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" heightSizable="YES" flexibleMaxY="YES"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                </tableView>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="X9R-kH-XGi">
-                    <rect key="frame" x="163" y="58" width="185" height="313"/>
+                    <rect key="frame" x="34" y="58" width="100" height="309"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </tableView>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="X9R-kH-XGi">
+                    <rect key="frame" x="163" y="58" width="185" height="309"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </tableView>
+                <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="jiantou" translatesAutoresizingMaskIntoConstraints="NO" id="gXb-FS-bGN">
+                    <rect key="frame" x="72" y="52" width="13" height="7"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                </imageView>
+                <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="jiantou" translatesAutoresizingMaskIntoConstraints="NO" id="I37-db-msJ">
+                    <rect key="frame" x="261" y="52" width="13" height="7"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                </imageView>
             </subviews>
             <color key="backgroundColor" red="0.96862745098039216" green="0.96862745098039216" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
@@ -79,5 +89,6 @@
     </objects>
     <resources>
         <image name="arrow_down" width="15" height="9"/>
+        <image name="jiantou" width="12" height="7"/>
     </resources>
 </document>
