--- a/StockAnalysis/Trade/TradePurchaseViewController.xib
+++ b/StockAnalysis/Trade/TradePurchaseViewController.xib
@@ -15,7 +15,11 @@
                 <outlet property="ShowBuyTypeView" destination="S2w-IL-008" id="tFh-O5-sxa"/>
                 <outlet property="askList" destination="WwZ-ch-hCJ" id="hWf-0X-CeL"/>
                 <outlet property="bidsList" destination="tXw-KY-4v5" id="bzO-LZ-hN4"/>
+                <outlet property="buyTypeLimitBtn" destination="Ifr-rz-iwy" id="Ws9-hN-ILY"/>
+                <outlet property="buyTypeMarketBtn" destination="Txz-n3-xKF" id="GjK-IH-W3B"/>
                 <outlet property="buyTypeView" destination="RXX-Lw-G32" id="5rT-D9-XAF"/>
+                <outlet property="buyTypeViewArrow" destination="Bse-zZ-kCX" id="gzV-Vx-wJY"/>
+                <outlet property="buyTypeViewImage" destination="qkx-35-6jZ" id="g7z-0E-ZCn"/>
                 <outlet property="depthView" destination="D4U-8i-MNp" id="38Q-En-Sdt"/>
                 <outlet property="editNumContainer" destination="Rem-vS-SPe" id="Sfm-ZH-IfE"/>
                 <outlet property="editPercentContainer" destination="c60-AZ-nqG" id="Cbz-r1-nHW"/>
@@ -165,7 +169,7 @@
                                         <action selector="clickSelectBuyType:" destination="-1" eventType="touchUpInside" id="JCF-5m-eP5"/>
                                     </connections>
                                 </button>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="arrow_down" translatesAutoresizingMaskIntoConstraints="NO" id="77i-oT-Zwq">
+                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="arrow_down" translatesAutoresizingMaskIntoConstraints="NO" id="77i-oT-Zwq">
                                     <rect key="frame" x="166" y="12" width="13" height="13"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                                 </imageView>
@@ -280,11 +284,15 @@
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </view>
                         <view hidden="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RXX-Lw-G32">
-                            <rect key="frame" x="0.0" y="48" width="169" height="79"/>
+                            <rect key="frame" x="0.0" y="55" width="187" height="79"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
+                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qkx-35-6jZ">
+                                    <rect key="frame" x="0.0" y="0.0" width="187" height="79"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                </imageView>
                                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Txz-n3-xKF">
-                                    <rect key="frame" x="0.0" y="40" width="169" height="39"/>
+                                    <rect key="frame" x="0.0" y="40" width="188" height="39"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <state key="normal" title="市价快速买入">
                                         <color key="titleColor" red="0.18823529410000001" green="0.18823529410000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -294,7 +302,7 @@
                                     </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ifr-rz-iwy">
-                                    <rect key="frame" x="0.0" y="0.0" width="169" height="40"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="188" height="40"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <state key="normal" title="限价买入">
                                         <color key="titleColor" red="0.18823529410000001" green="0.18823529410000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -303,6 +311,10 @@
                                         <action selector="clickLimitBuy:" destination="-1" eventType="touchUpInside" id="giz-yV-QVu"/>
                                     </connections>
                                 </button>
+                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="jiantou" translatesAutoresizingMaskIntoConstraints="NO" id="Bse-zZ-kCX">
+                                    <rect key="frame" x="166" y="-7" width="13" height="7"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                </imageView>
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </view>
@@ -528,6 +540,10 @@
                     <rect key="frame" x="262" y="366" width="100" height="118"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxY="YES"/>
                     <subviews>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="kuang" translatesAutoresizingMaskIntoConstraints="NO" id="tAm-Rv-esl">
+                            <rect key="frame" x="-5" y="-6" width="110" height="132"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                        </imageView>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1d1-n6-mOy">
                             <rect key="frame" x="0.0" y="7" width="100" height="27"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -571,7 +587,9 @@
         </view>
     </objects>
     <resources>
-        <image name="arrow_down" width="13" height="13"/>
+        <image name="arrow_down" width="15" height="9"/>
+        <image name="jiantou" width="12" height="7"/>
+        <image name="kuang" width="110" height="132"/>
         <image name="trade_detail" width="20" height="20"/>
     </resources>
 </document>
