--- a/StockAnalysis/UserInfo/UserInfoViewController.xib
+++ b/StockAnalysis/UserInfo/UserInfoViewController.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_0" orientation="portrait">
+    <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -18,11 +18,11 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cCa-LK-F1p">
-                    <rect key="frame" x="0.0" y="20" width="320" height="101"/>
+                    <rect key="frame" x="0.0" y="20" width="375" height="101"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wode" translatesAutoresizingMaskIntoConstraints="NO" id="cpn-pd-tHH">
                             <rect key="frame" x="24" y="38" width="44" height="44"/>
@@ -49,7 +49,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yeH-44-Sw6">
-                            <rect key="frame" x="232" y="56" width="62" height="30"/>
+                            <rect key="frame" x="287" y="56" width="62" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="Cbh-HH-iQ9"/>
                             </constraints>
@@ -76,16 +76,16 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lG6-NY-peS" userLabel="safe">
-                    <rect key="frame" x="0.0" y="120" width="106.5" height="75"/>
+                    <rect key="frame" x="0.0" y="120" width="125" height="75"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gz9-qO-TRk">
-                            <rect key="frame" x="0.0" y="0.0" width="106.5" height="75"/>
+                            <rect key="frame" x="0.0" y="0.0" width="125" height="75"/>
                             <connections>
                                 <action selector="clickSafeInfo:" destination="-1" eventType="touchUpInside" id="VO2-iW-f4w"/>
                             </connections>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="安全中心" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zEK-iz-SPX">
-                            <rect key="frame" x="22.5" y="48" width="62" height="18"/>
+                            <rect key="frame" x="31.5" y="48" width="62" height="18"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="18" id="xXd-3T-R6m"/>
                             </constraints>
@@ -94,7 +94,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="safe" translatesAutoresizingMaskIntoConstraints="NO" id="6IA-30-K27">
-                            <rect key="frame" x="40.5" y="15" width="25" height="25"/>
+                            <rect key="frame" x="49.5" y="15" width="25" height="25"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="25" id="RY7-ky-lR9"/>
                                 <constraint firstAttribute="height" constant="25" id="lSI-O8-QnY"/>
@@ -115,16 +115,16 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hfl-Kg-JCn" userLabel="id">
-                    <rect key="frame" x="106.5" y="120" width="107" height="75"/>
+                    <rect key="frame" x="125" y="120" width="125" height="75"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="diw-D8-PtY">
-                            <rect key="frame" x="0.0" y="0.0" width="107" height="75"/>
+                            <rect key="frame" x="0.0" y="0.0" width="125" height="75"/>
                             <connections>
                                 <action selector="clickAuth:" destination="-1" eventType="touchUpInside" id="emu-1X-YCr"/>
                             </connections>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="身份认证" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tor-cJ-Xc5">
-                            <rect key="frame" x="22.5" y="46" width="62" height="18"/>
+                            <rect key="frame" x="31.5" y="46" width="62" height="18"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="18" id="NMw-xn-psm"/>
                             </constraints>
@@ -133,7 +133,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="id" translatesAutoresizingMaskIntoConstraints="NO" id="SD3-0g-fIN">
-                            <rect key="frame" x="41.5" y="13" width="25" height="25"/>
+                            <rect key="frame" x="50.5" y="13" width="25" height="25"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="25" id="gMv-cf-vhm"/>
                                 <constraint firstAttribute="height" constant="25" id="wmG-sm-bH0"/>
@@ -154,13 +154,13 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dh6-Xi-Avn" userLabel="yue">
-                    <rect key="frame" x="213.5" y="120" width="106.5" height="75"/>
+                    <rect key="frame" x="250" y="120" width="125" height="75"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Re7-zi-0NO">
-                            <rect key="frame" x="0.0" y="0.0" width="106.5" height="75"/>
+                            <rect key="frame" x="0.0" y="0.0" width="125" height="75"/>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Z点余额" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nU7-jj-Jdr">
-                            <rect key="frame" x="25" y="46" width="56" height="18"/>
+                            <rect key="frame" x="34.5" y="46" width="56" height="18"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="18" id="Nap-NB-w7O"/>
                             </constraints>
@@ -169,7 +169,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.000000" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ne2-rf-I0p">
-                            <rect key="frame" x="15" y="13" width="76" height="21"/>
+                            <rect key="frame" x="24.5" y="13" width="76" height="21"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="21" id="OXm-wA-HDg"/>
                             </constraints>
@@ -192,7 +192,7 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y5v-B4-eZN" userLabel="系统设置">
-                    <rect key="frame" x="0.0" y="206" width="320" height="51"/>
+                    <rect key="frame" x="0.0" y="206" width="375" height="51"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="set" translatesAutoresizingMaskIntoConstraints="NO" id="Oth-bU-f9o">
                             <rect key="frame" x="8" y="8" width="33" height="33"/>
@@ -206,7 +206,10 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="83T-dE-7aL">
-                            <rect key="frame" x="0.0" y="0.0" width="320" height="51"/>
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="51"/>
+                            <connections>
+                                <action selector="clickSystemBtn:" destination="-1" eventType="touchUpInside" id="1Zn-Rz-eaw"/>
+                            </connections>
                         </button>
                         <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aMc-RK-QTp">
                             <rect key="frame" x="32" y="50" width="343" height="1"/>
@@ -214,7 +217,7 @@
                             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </view>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Page next" translatesAutoresizingMaskIntoConstraints="NO" id="rib-iX-Z1e">
-                            <rect key="frame" x="274" y="9" width="18" height="31"/>
+                            <rect key="frame" x="329" y="9" width="18" height="31"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                         </imageView>
                     </subviews>
@@ -228,7 +231,7 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kkp-qb-VAR" userLabel="问题反馈">
-                    <rect key="frame" x="0.0" y="259" width="320" height="51"/>
+                    <rect key="frame" x="0.0" y="259" width="375" height="51"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="question" translatesAutoresizingMaskIntoConstraints="NO" id="QlN-95-bjk">
                             <rect key="frame" x="8" y="8" width="33" height="33"/>
@@ -247,11 +250,11 @@
                             <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </view>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Page next" translatesAutoresizingMaskIntoConstraints="NO" id="cdU-2Q-Lj4">
-                            <rect key="frame" x="274" y="9" width="18" height="31"/>
+                            <rect key="frame" x="329" y="9" width="18" height="31"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                         </imageView>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Brb-RG-KvU">
-                            <rect key="frame" x="0.0" y="0.0" width="320" height="51"/>
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="51"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <connections>
                                 <action selector="clickFeedback:" destination="-1" eventType="touchUpInside" id="YEd-Rj-afX"/>
@@ -264,7 +267,7 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="U2e-hq-fef" userLabel="帮助中心">
-                    <rect key="frame" x="0.0" y="310" width="320" height="51"/>
+                    <rect key="frame" x="0.0" y="310" width="375" height="51"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="help" translatesAutoresizingMaskIntoConstraints="NO" id="WRe-rn-6Z3">
                             <rect key="frame" x="8" y="8" width="33" height="33"/>
@@ -278,7 +281,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9D4-7S-YB7">
-                            <rect key="frame" x="0.0" y="0.0" width="320" height="51"/>
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="51"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         </button>
                         <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RxS-Ux-wFF">
@@ -287,7 +290,7 @@
                             <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </view>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Page next" translatesAutoresizingMaskIntoConstraints="NO" id="F8s-EA-7jr">
-                            <rect key="frame" x="274" y="9" width="18" height="31"/>
+                            <rect key="frame" x="329" y="9" width="18" height="31"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                         </imageView>
                     </subviews>
@@ -297,7 +300,7 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jEj-dl-PG9" userLabel="版本更新">
-                    <rect key="frame" x="0.0" y="361" width="320" height="51"/>
+                    <rect key="frame" x="0.0" y="361" width="375" height="51"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="update" translatesAutoresizingMaskIntoConstraints="NO" id="lvZ-KI-Zm3">
                             <rect key="frame" x="8" y="8" width="33" height="33"/>
@@ -320,7 +323,7 @@
                             <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </view>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Page next" translatesAutoresizingMaskIntoConstraints="NO" id="1yL-jE-ksr">
-                            <rect key="frame" x="274" y="9" width="18" height="31"/>
+                            <rect key="frame" x="329" y="9" width="18" height="31"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                         </imageView>
                     </subviews>
@@ -330,10 +333,10 @@
                     </constraints>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JNx-Dj-UtW">
-                    <rect key="frame" x="0.0" y="435" width="320" height="30"/>
+                    <rect key="frame" x="0.0" y="435" width="375" height="45"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="30" id="2GQ-ga-iyq"/>
+                        <constraint firstAttribute="height" constant="45" id="2GQ-ga-iyq"/>
                     </constraints>
                     <state key="normal" title="退出当前用户">
                         <color key="titleColor" red="0.74901960784313726" green="0.75686274509803919" blue="0.75294117647058822" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
